# topological-dark-solitons

./: CITATION.cff  README.md  paper.tex  pyproject.toml  requirements.txt  zenodo-metadata.json
docs/: numerics.md  theory.md
examples/: milky_way_profile.py  parameter_scan.py
scripts/: generate_plots.py
src/: density_profiles.py  helmholtz_solver.py  locking_energy.py  stability_tests.py
tests/: ngc_test_plot.py
