[project]
name = "topological-dark-solitons"
version = "0.1.0"
description = "Helmholtz-screened topological solitons from mutual Chern–Simons locking."
authors = [
  { name = "Xicplice" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/<your-username>/topological-dark-solitons"
Documentation = "https://github.com/<your-username>/topological-dark-solitons/tree/main/docs"
Source = "https://github.com/<your-username>/topological-dark-solitons"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
